# Ruya

./: .gitignore  CMakeLists.txt  CmakeLists.txt  README.md  icosahedron_model.txt  version.h.in
RandomTesting/: RandomTesting.vcxproj  RandomTesting.vcxproj.filters  main.cpp  other.cpp  other.h
Ruya/: MainWindow.cpp  MainWindow.h  Material.h  Object.cpp  Object.h  Ruya.sln  Ruya.vcxproj  Ruya.vcxproj.filters  Square.h  code_analysis_ruleset.ruleset  glad.c  imgui.ini  main.cpp  vertex_shader.vert
Ruya/includes/glad/: glad.h
Ruya/libs/: glfw3.lib
Ruya/resources/Leather008_1K-PNG/: Leather008_1K-PNG.usdc
Ruya/resources/Leather026_1K-PNG/: Leather026_1K-PNG.usda  Leather026_1K-PNG.usdc
Ruya/resources/Leather032_1K-PNG/: Leather032_1K-PNG.usda
Ruya/resources/Wood067_1K-PNG/: Wood067_1K-PNG.usdc
Ruya/source/: Application.h  Camera.cpp  Camera.h  Cube.cpp  Cube.h  Icosahedron.cpp  Icosahedron.h  Icosphere.hpp  KeyframeEditor.hpp  LightSource.h  MainWindow.cpp  MainWindow.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Object.cpp  Object.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  Square.cpp  Square.h  TestApplication.hpp  Texture.cpp  Texture.h  Timer.cpp  Timer.h  UUID.cpp  UUID.h  Window.cpp  Window.h  main.cpp
Ruya/source/shaders/: fragment_basic_lighting.frag  fragment_light_source.frag  fragment_no_tex.frag  fragment_shader.frag  vertex_basic_lighting.vert  vertex_no_tex.vert  vertex_shader.vert
Ruya/source/shaders/flat/: flat_frag.frag  flat_geom.geom  flat_shading.frag  flat_vert.vert
Ruya/source/shaders/phong/: light_source.frag  object.frag  object.vert
includes/: dummy.c
includes/glad/: CMakeLists.txt  glad.c  glad.h
resources/Asphalt010_1K-PNG/: Asphalt010_1K-PNG.usda  Asphalt010_1K-PNG.usdc
resources/Leather008_1K-PNG/: Leather008_1K-PNG.usda
resources/Leather025_1K-PNG/: Leather025_1K-PNG.usda  Leather025_1K-PNG.usdc
resources/Leather032_1K-PNG/: Leather032_1K-PNG.usdc
resources/MetalPlates008_1K-PNG/: MetalPlates008_1K-PNG.usda  MetalPlates008_1K-PNG.usdc
resources/Wood049_1K-PNG/: Wood049_1K-PNG.usda  Wood049_1K-PNG.usdc
resources/Wood067_1K-PNG/: Wood067_1K-PNG.usda
src/: app.h  main.cpp  mesh.cpp  test_app.hpp
src/core/: window.h
src/engine/: object.cpp  texture.cpp
src/engine/core/: window.cpp
src/engine/models/: cube.cpp  cube.h  icosahedron.cpp  icosahedron.h  icosphere.hpp  square.cpp  square.h
src/engine/render/: renderer.cpp  renderer.h  shader.cpp
src/engine/render/shaders/: shader_file_extensions.txt
src/engine/render/shaders/flat/: flat_frag.frag  flat_vert.vert
src/engine/render/shaders/old/: vertex_shader.vert
src/engine/render/shaders/phong/: object.frag  object.vert
src/engine/scene/: camera.cpp  light_source.h  material.cpp  material.h  mesh.cpp  mesh.h  object.h  scene.cpp  scene.h
src/engine/scene/models/: cube.cpp  cube.h  icosahedron.cpp  icosahedron.h  icosphere.hpp  square.cpp  square.h
src/engine/shaders/old/: fragment_shader.frag
src/utils/: timer.cpp  timer.h  uuid.cpp  uuid.h
